# naut

./: .gitignore  CMakeLists.txt  README.md  backtest_binance_orderbook.ipynb  build.sh  download_binance_orderbook.py  elixir_scaling_results.json  executed_backtest_binance_orderbook.ipynb  generate_synthetic_orderbook.py  performance_report_1749262508.txt  performance_report_1749265468.txt  setup.py  test_assembly.s  uhft_simulation_results.json
.lh/: download_binance_orderbook.py.json  generate_synthetic_orderbook.py.json
benchmarks/: assembly_simulation.py  baseline_test.py  corrected_assembly_benchmark.py  extreme_risk_optimization.py  gpu_analysis.py  gpu_comparison.py  maximum_performance.py  optimized_order_book_benchmark.py  performance_benchmark.py  performance_report.py  real_assembly_benchmark.py  simple_ultra_fast_benchmark.py  ultimate_risk_benchmark.py  ultimate_test.py  ultra_fast_benchmark.py  ultra_fast_risk_benchmark.py
catalog/data/currency_pair/BTCUSDT.BINANCE/: part-0.parquet
nautilus_assembly/: assembly_core.pyx  hot_path_analyzer.py  integration_test.py  nautilus_assembly.pyx  nautilus_hot_paths.pyx  real_hot_path_analysis.py  simple_hot_path_analysis.py
nautilus_assembly/include/: assembly_engine.h  nautilus_hot_paths.h  optimized_core.h
nautilus_assembly/src/: market_data.s  nautilus_hot_paths.s  optimized_core.s  order_book.s  production_risk.s  risk_engine.s  signals.s  simple_ultra_fast.s  ultra_fast_order_book.s  ultra_fast_risk.s
presentation/: DEMO_GUIDE.md  DEMO_GUIDE_ULTRA.md  EXECUTIVE_BRIEF.md  EXECUTIVE_BRIEF_ULTRA.md  PRESENTATION.md  TECHNICAL_SPEC.md  chart_generator.py  chart_generator_ultra.py
simulations/: elixir_scaling.py  revenue_simulator.py
strategies/: assembly_strategy.py  optimized_strategy_template.py
